// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Authentication - Verify JWT Authority without discovery endpoint 1`] = `
Object {
  "jwt_foo": "FOO",
}
`;

exports[`Authentication - Verify JWT Authority without discovery endpoint: gateway logs 1`] = `
"**** START OUTPUT CAPTURE *****\\"
[hh:mm:ss.ms] TRACE: JWK found
    authority: \\"http://authority-without-discrovery-endpoint\\"
[hh:mm:ss.ms] TRACE: JWT verified
    issuer: \\"http://localhost:8070\\"
[hh:mm:ss.ms] TRACE: Started to handle request
    query: \\"{\\\\n  jwt_foo\\\\n}\\\\n\\"
[hh:mm:ss.ms] TRACE: Finished to handle request
    query: \\"{\\\\n  jwt_foo\\\\n}\\\\n\\"
    durationMs: XXX
\\"***** END OUTPUT CAPTURE *****"
`;

exports[`Authentication - Verify JWT Invalid Authentication Scheme 1`] = `
Object {
  "error": "Unauthorized",
  "message": "Unauthorized",
  "status": 401,
  "statusCode": 401,
}
`;

exports[`Authentication - Verify JWT Invalid JWT 1`] = `
Object {
  "error": "Unauthorized",
  "message": "Unauthorized",
  "status": 401,
  "statusCode": 401,
}
`;

exports[`Authentication - Verify JWT Invalid JWT: gateway logs 1`] = `
"**** START OUTPUT CAPTURE *****\\"
[hh:mm:ss.ms] DEBUG: New authority received. Creating new JWKs client...
    authority: \\"http://authority-without-discrovery-endpoint\\"
    jwksUri: \\"http://oidc-server-mock:8070/.well-known/openid-configuration/jwks\\"
[hh:mm:ss.ms] ERROR: Failed to get JWK for request token.
    err: {
      \\"type\\": \\"SigningKeyNotFoundError\\",
      \\"message\\": \\"Unable to find a signing key that matches 'C1B59DF60057CFB292C4E36CCE329615'\\",
      \\"stack\\":
          SigningKeyNotFoundError: Unable to find a signing key that matches 'C1B59DF60057CFB292C4E36CCE329615'
      \\"name\\": \\"SigningKeyNotFoundError\\"
    }
    authority: \\"http://authority-without-discrovery-endpoint\\"
    jwksUri: \\"http://oidc-server-mock:8070/.well-known/openid-configuration/jwks\\"
[hh:mm:ss.ms] DEBUG: Failed to verify request JWT
    err: {
      \\"type\\": \\"SigningKeyNotFoundError\\",
      \\"message\\": \\"Unable to find a signing key that matches 'C1B59DF60057CFB292C4E36CCE329615'\\",
      \\"stack\\":
          SigningKeyNotFoundError: Unable to find a signing key that matches 'C1B59DF60057CFB292C4E36CCE329615'
      \\"name\\": \\"SigningKeyNotFoundError\\"
    }
    issuer: \\"http://localhost:8070\\"
\\"***** END OUTPUT CAPTURE *****"
`;

exports[`Authentication - Verify JWT Second call with valid JWT - JWKs caching 1`] = `
Object {
  "jwt_foo": "FOO",
}
`;

exports[`Authentication - Verify JWT Second call with valid JWT - JWKs caching: gateway logs 1`] = `
"**** START OUTPUT CAPTURE *****\\"
[hh:mm:ss.ms] TRACE: JWK found
    authority: \\"http://oidc-server-mock:8060\\"
[hh:mm:ss.ms] TRACE: JWT verified
    issuer: \\"http://localhost:8060\\"
[hh:mm:ss.ms] TRACE: Started to handle request
    query: \\"{\\\\n  jwt_foo\\\\n}\\\\n\\"
[hh:mm:ss.ms] TRACE: Finished to handle request
    query: \\"{\\\\n  jwt_foo\\\\n}\\\\n\\"
    durationMs: XXX
\\"***** END OUTPUT CAPTURE *****"
`;

exports[`Authentication - Verify JWT Unexpected audience 1`] = `
Object {
  "error": "Unauthorized",
  "message": "Unauthorized",
  "status": 401,
  "statusCode": 401,
}
`;

exports[`Authentication - Verify JWT Unexpected audience: gateway logs 1`] = `
"**** START OUTPUT CAPTURE *****\\"
[hh:mm:ss.ms] DEBUG: Unexpected audience
    issuer: \\"http://localhost:8070\\"
    audience: \\"Stitch Other\\"
\\"***** END OUTPUT CAPTURE *****"
`;

exports[`Authentication - Verify JWT Unknown issuer 1`] = `
Object {
  "error": "Unauthorized",
  "message": "Unauthorized",
  "status": 401,
  "statusCode": 401,
}
`;

exports[`Authentication - Verify JWT Unknown issuer: gateway logs 1`] = `
"**** START OUTPUT CAPTURE *****\\"
[hh:mm:ss.ms] DEBUG: Unknown issuer
    issuer: \\"http://microsoft.com\\"
\\"***** END OUTPUT CAPTURE *****"
`;

exports[`Authentication - Verify JWT Valid JWT 1`] = `
Object {
  "jwt_foo": "FOO",
}
`;

exports[`Authentication - Verify JWT Valid JWT: gateway logs 1`] = `
"**** START OUTPUT CAPTURE *****\\"
[hh:mm:ss.ms] DEBUG: New authority received. Creating new JWKs client...
    authority: \\"http://oidc-server-mock:8060\\"
    jwksUri: \\"http://oidc-server-mock:8060/.well-known/openid-configuration/jwks\\"
[hh:mm:ss.ms] TRACE: JWK found
    authority: \\"http://oidc-server-mock:8060\\"
[hh:mm:ss.ms] TRACE: JWT verified
    issuer: \\"http://localhost:8060\\"
[hh:mm:ss.ms] TRACE: Started to handle request
    query: \\"{\\\\n  jwt_foo\\\\n}\\\\n\\"
[hh:mm:ss.ms] TRACE: Finished to handle request
    query: \\"{\\\\n  jwt_foo\\\\n}\\\\n\\"
    durationMs: XXX
\\"***** END OUTPUT CAPTURE *****"
`;
